[package]
name = "stringer"
version = "0.1.0"
authors = ["sam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.syn]
version = "^1"
default-features = true
features = ["full","extra-traits","parsing","printing"]

[dependencies.proc-macro2]
features = ["span-locations"]